--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Znode is a minimalistic browser based flowchart editor.
+Code Visualizer is a Javascript source code visualization tool being developed
+for an Enterprise Software Design course at Northeastern University.
 
-For more information see this link: http://zreference.com/znode/
