2nd edit to the basic README file.

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Code Visualizer is a Javascript source code visualization tool being developed
 for an Enterprise Software Design course at Northeastern University.
 
+This is the 2nd attempt to push edits.
