first try to commit

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Znode is a minimalistic browser based flowchart editor.
 
 For more information see this link: http://zreference.com/znode/
+
+Edited....
